[package]
name = "Backend-Agario"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
chrono = "0.4"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros","chrono"] }
argon2 = "0.5.3"
rand_core = "0.10.0"
base64 = "0.22.1"
rand = "0.10.0"
num_cpus = "1.17.0"
